[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Android 101.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/scripts/menus/mainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.301961, 0.352941, 0.568627, 0.513726 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_size = 1
outline_color = Color( 0.301961, 0.352941, 0.568627, 0.513726 )
use_filter = true
font_data = ExtResource( 1 )

[node name="mainMenu" type="Node2D"]
script = ExtResource( 2 )
sceneDir = "levels"
scene = "gameOver"

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 232.0
margin_bottom = 97.0
rect_min_size = Vector2( 256, 224 )
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainMarginContainer" type="MarginContainer" parent="."]
margin_right = 256.0
margin_bottom = 224.0
rect_min_size = Vector2( 256, 224 )
custom_constants/margin_right = 10
custom_constants/margin_top = 20
custom_constants/margin_left = 16
custom_constants/margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainVBoxContainer" type="VBoxContainer" parent="mainMarginContainer"]
margin_left = 16.0
margin_top = 20.0
margin_right = 246.0
margin_bottom = 220.0

[node name="titleLabel" type="Label" parent="mainMarginContainer/mainVBoxContainer"]
margin_right = 230.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
text = "Another Space
Invaders Clone"
align = 1
valign = 1

[node name="topVSeparator" type="VSeparator" parent="mainMarginContainer/mainVBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 41.0
margin_right = 230.0
margin_bottom = 105.0
size_flags_vertical = 3

[node name="interactLabel" type="Label" parent="mainMarginContainer/mainVBoxContainer"]
margin_top = 109.0
margin_right = 230.0
margin_bottom = 118.0
custom_fonts/font = SubResource( 2 )
text = "press enter to start"
align = 1
valign = 1

[node name="bottomVSeparator" type="VSeparator" parent="mainMarginContainer/mainVBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 122.0
margin_right = 230.0
margin_bottom = 186.0
size_flags_vertical = 3

[node name="scoreHBoxContainer" type="HBoxContainer" parent="mainMarginContainer/mainVBoxContainer"]
margin_top = 190.0
margin_right = 230.0
margin_bottom = 199.0
alignment = 2

[node name="scoreVBoxContainer" type="VBoxContainer" parent="mainMarginContainer/mainVBoxContainer/scoreHBoxContainer"]
margin_left = 129.0
margin_right = 230.0
margin_bottom = 9.0

[node name="scoreLabel" type="Label" parent="mainMarginContainer/mainVBoxContainer/scoreHBoxContainer/scoreVBoxContainer"]
visible = false
margin_right = 101.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 2 )
text = "score: 00000"
valign = 1

[node name="highScoreLabel" type="Label" parent="mainMarginContainer/mainVBoxContainer/scoreHBoxContainer/scoreVBoxContainer"]
margin_right = 101.0
margin_bottom = 9.0
custom_fonts/font = SubResource( 2 )
text = "highscore: 00000"
valign = 1
